fix: Frost fix email field cutoff issue, fix #273

--- a/sass/themes/frost/core/components/_form.scss
+++ b/sass/themes/frost/core/components/_form.scss
@@ -294,6 +294,11 @@ form {
       @include font-size($p-intro-font-size);
     }
   }
+  @include breakpoint($screen-md) {
+    input[type="text"] {
+      max-width: 64%;
+    }
+  }
 }
 #insert-password {
   .page-title {
